# TSPICE

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  WHATSNEW.md  add_docstrings.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: conf.py  examples.rst  index.rst  plot.rst  utils.rst
docs/_build/doctrees/: README.doctree  environment.pickle  examples.doctree  index.doctree  multimin.doctree  orbit.doctree  planet.doctree  plot.doctree  population.doctree  tides.doctree  util.doctree  utils.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  README.html  examples.html  genindex.html  index.html  (+12 more)
docs/examples/: love_numbers_quickstart.ipynb  love_numbers_test.ipynb  love_numbers_tutorial.ipynb  planet_interior_indepth.ipynb  tidal_potential_quickstart.ipynb  tidal_signal_test.ipynb
examples/: .gitignore  love_numbers_indepth.ipynb  love_numbers_quickstart.ipynb  love_numbers_test.ipynb  love_numbers_tutorial.ipynb  planet_interior_indepth.ipynb  tidal_potential_indepth.ipynb  tidal_potential_quickstart.ipynb  tidal_signal_test.ipynb  tspice_data
legacy/: Makefile  setup.py
papers/introducing-tspice/: Calculations_LoveNumbers.ipynb  IntegrationInternalSolutions.ipynb  Tides_ForcePotential.ipynb
src/tspice/: __init__.py  internal_dynamics.py  planet.py  plot.py  plotting.py  tidal_signal.py  tides.py  utils.py
src/tspy/: __init__.py  kernels.py  tidal_signal.py
test/: kernels_download_test.ipynb  love_numbers_test.ipynb  tidal_signal_test.ipynb
test/thesis/: Calculations_TidalPotential.ipynb  ElasticityTheory.ipynb
tests/: test_basic.py
tutorials/: love_numbers_test.ipynb
(+53 files in other folders)
