##################################################################
#                                                                #
# TSPICE: Tidal Signal with Python and SPICE                     #
#                                                                #
##################################################################
# License: GNU Affero General Public License v3 (AGPL-3.0)       #
##################################################################
[build-system]
requires = ['setuptools', 'numpy', 'scipy', 'spiceypy']
build-backend = "setuptools.build_meta"
